--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,29 @@
 /*
-new tags
+box model
 */
 
 header {
     text-align: center;
     background-color: green;
+    border: solid #000000 1px;
+    width:100%;
+    height: 50px;
+}
+
+nav {
+    display: inline-block;
+    height: 700px;
+    float: left;
+    border: solid #000000 1px;
+    width: 200px;
+    background-color: #ffff00;
+}
+
+section {
+    margin: 0 auto;
+    display: inline-block;
+    height: 700px;
+    float: right;
     border: solid #000000 1px;
 }
 
@@ -12,12 +31,14 @@ footer {
     text-align: center;
     background-color: red;
     border: solid #000000 1px;
+    display: inline-block;
+    height: 150px;
+    width: 100%;
 }
 
-section {
-    background-color: #ffff00;
-    margin: 0 auto;
-}
+/*
+Game Board
+*/  
 
 table {
     margin: auto;
@@ -28,17 +49,21 @@ table {
 td {
     background-image: url("../img/cardback.jpg");
     background-repeat: no-repeat;
-    background-size:230px 150px;
+    background-size:235px 153px;
     height: 150px;
     width: 230px;
     border: solid #000000 1px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px #888888;
+    padding: 0px;
 }
 
 div {
-    display: inline-block;
+
 }
 
 .card {
     height: 150px;
     width: 230px;
+    border-radius: 5px;
 }
