--- a/css/custom.css
+++ b/css/custom.css
@@ -2,21 +2,24 @@
 box model
 */
 
+body {
+    margin-top:0px;
+    padding-top:0px;
+    color: #ffffff;
+    background-color: #000000;
+}
+
 header {
-    text-align: center;
-    background-color: green;
-    border: solid #000000 1px;
     width:100%;
-    height: 50px;
+    height: 60px;
+    margin: 0;
 }
 
 nav {
     display: inline-block;
     height: 700px;
     float: left;
-    border: solid #000000 1px;
-    width: 200px;
-    background-color: #ffff00;
+    width: 250px;
 }
 
 section {
@@ -37,8 +40,39 @@ footer {
 }
 
 /*
+styling
+*/
+
+header {
+    background-image: url("../img/header.png");
+    background-repeat: no-repeat;
+    background-size:400px 60px;
+    background-position: left;
+    background-color: #000000;
+}
+
+header h1 {
+    font-family: serif;
+    color: white;
+    display: none;
+}
+
+
+nav {
+    border: solid #000000 1px;
+    background-color: black;
+    background-image: url("../img/nav.png");
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    background-size:300px 350px;
+}
+
+/*
 Game Board
-*/  
+*/
+section {
+    background-color: #ffffff;
+}
 
 table {
     margin: auto;
