--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,7 @@ box model
 */
 
 body {
+    box-sizing: border-box;
     margin-top:0px;
     padding-top:0px;
     color: #ffffff;
@@ -10,43 +11,72 @@ body {
 }
 
 header {
+    box-sizing: border-box;
     width:100%;
     height: 60px;
     margin: 0;
 }
 
 nav {
+    box-sizing: border-box;
     display: inline-block;
-    height: 700px;
+    height: 660px;
     float: left;
-    width: 250px;
+    width: 180px;
 }
 
 section {
+    box-sizing: border-box;
     margin: 0 auto;
     display: inline-block;
-    height: 700px;
+    height: 660px;
     float: right;
     border: solid #000000 1px;
 }
 
 footer {
+    box-sizing: border-box;
     text-align: center;
-    background-color: red;
-    border: solid #000000 1px;
     display: inline-block;
-    height: 150px;
+    height: 190px;
     width: 100%;
+    text-transform: uppercase;
 }
 
 /*
 styling
 */
 
+a{
+    text-decoration: none;
+}
+
+a:link {
+    color: #ffffff;
+}
+
+a:visited {
+    color: #ffffff;
+}
+
+a:hover {
+    color: gray;
+}
+
+a:active {
+    color: gray;
+}
+
+
+
+
+
+
+
 header {
     background-image: url("../img/header.png");
     background-repeat: no-repeat;
-    background-size:400px 60px;
+    background-size:450px 70px;
     background-position: left;
     background-color: #000000;
 }
@@ -57,21 +87,67 @@ header h1 {
     display: none;
 }
 
-
 nav {
     border: solid #000000 1px;
     background-color: black;
-    background-image: url("../img/nav.png");
+/*    background-image: url("../img/nav.png");
     background-repeat: no-repeat;
     background-position: bottom left;
     background-size:300px 350px;
+*/
 }
+
+footer {
+    background-color: #000000;
+    background-image: url("../img/footer.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: 1200px 190px;
+    font-family: serif;
+}
+
+/*
+HUD styling
+*/
+
+#hud div {
+    margin: 10px;
+    background-color: #A8000D;
+    padding: 5px 5px 3px;
+}
+
+#hud {
+
+}
+
+#start_end_button{
+    text-transform: uppercase;
+    text-align: left;
+    font-family: serif;
+}
+
+#start_end_button:hover{
+    background: red;
+}
+
+#number_of_turns{
+    text-transform: uppercase;
+    text-align: left;
+    font-family: serif;
+}
+
+#number_of_matches{
+    text-transform: uppercase;
+    text-align: left;
+    font-family: serif;
+}
+
 
 /*
 Game Board
 */
 section {
-    background-color: #ffffff;
+    background-color: #000000;
 }
 
 table {
@@ -86,14 +162,10 @@ td {
     background-size:235px 153px;
     height: 150px;
     width: 230px;
-    border: solid #000000 1px;
+    border: solid gray 1px;
     border-radius: 5px;
-    box-shadow: 5px 5px 5px #888888;
+//    box-shadow: 5px 5px 5px #888888;
     padding: 0px;
-}
-
-div {
-
 }
 
 .card {
@@ -101,3 +173,4 @@ div {
     width: 230px;
     border-radius: 5px;
 }
+
