--- a/css/custom.css
+++ b/css/custom.css
@@ -13,7 +13,7 @@ body {
 header {
     box-sizing: border-box;
     width:100%;
-    height: 60px;
+    height: 90px;
     margin: 0;
 }
 
@@ -43,6 +43,11 @@ footer {
     text-transform: uppercase;
 }
 
+#container {
+    width: 1180px;
+    margin: auto;
+}
+
 /*
 styling
 */
@@ -68,15 +73,10 @@ a:active {
 }
 
 
-
-
-
-
-
 header {
     background-image: url("../img/header.png");
     background-repeat: no-repeat;
-    background-size:450px 70px;
+    background-size:480px 90px;
     background-position: left;
     background-color: #000000;
 }
