--- a/css/custom.css
+++ b/css/custom.css
@@ -9,8 +9,12 @@ footer {
     background-repeat: no-repeat;
     background-position: bottom right;
     background-size: 1200px 190px;
-    font-family: serif;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     text-transform: uppercase;
+}
+
+footer h1, h2, h3, h4, h5, h6 {
+    font-weight: lighter;   
 }
 
 a{
